# qwbot

./: .dockerignore  .env.deploy.example  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: QWB-001-消息模板优化.md  README-需求文档基线.md
qwbot/: __init__.py  cli.py  config.py  message.py  planner.py  sources.py  store.py  web.py  wecom.py  wsgi.py
qwbot/static/: app.js  style.css
qwbot/templates/: _batch_section.html  _notification_modal.html  _notification_section.html  _plan_modal.html  _progress_section.html  _section.html  index.html  notifications.html
scripts/: bootstrap-server.sh  deploy.sh  dev-web.bat  dev.sh  logs.sh  stop.sh  test-scheduled.bat  test-scheduled.sh
